# CryptDriveServer

./: CryptDrive data  README.md  install.ps1  install.sh  pyproject.toml
Server/Dependencies/: Constants.py
Server/Services/: ServerFileService.py
src/: main.py  modules.txt
src/DAOs/: FilesDatabaseDAO.py  FilesDiskDAO.py  UsersDatabaseDAO.py
src/Dependencies/: Constants.py  VerbDictionary.py
src/Services/: FilesService.py  PasswordHashingManager.py  SecureCommunicationManager.py  ServerFileService.py  TokenService.py  TokensService.py  UsersService.py
